# Fire_forecast

./: CMakeLists.txt  README.md
Docker/Client/: CMakeLists.txt  Dockerfile  TCPClient_task.cpp
Docker/Server/: CMakeLists.txt  Dockerfile
Docker/Server/include/: TCPServer.h
Docker/Server/src/: Sensor.cpp
Fire_forecast/: CMakeLists.txt  TCPClient_task.cpp  TCPServer_task.cpp
Fire_forecast/include/: Client.h  Sensor.h  Sensor_node.h  TCPClient.h  TCPServer.h
Fire_forecast/src/: Client.cpp  Sensor_node.cpp  TCPClient.cpp  TCPServer.cpp
Test/: CMakeLists.txt  Test.cpp
